@@ -1,3 +1,8 @@
+2005-08-17  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* cofflink.c (_bfd_coff_generic_relocate_section): Correct
+	comment.
+
 2005-08-17  Alan Modra  <amodra@bigpond.net.au>
 
 	* elflink.c (_bfd_elf_define_linkage_sym): Don't call
